--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>¡Hola! Soy [Tu Nombre]</h1>
+  <h1>¡Hola! Soy Federico Merlo Brac</h1>
   <p>Soy desarrollador web en formación.</p>
 
   <img src="https://via.placeholder.com/150" alt="Foto de perfil">
