--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h1>¡Hola! Soy Federico Merlo Brac</h1>
-  <p>Soy desarrollador web en formación.</p>
+  <p>Soy estudiante de programacion en la UTN</p>
 
   <img src="https://via.placeholder.com/150" alt="Foto de perfil">
 
