Creada página contacto.html con tabla de datos

--- a/contacto.html
+++ b/contacto.html
@@ -7,8 +7,8 @@
 <body>
   <h2>Contacto</h2>
   <table>
-    <tr><td>Email:</td><td>correo@ejemplo.com</td></tr>
-    <tr><td>LinkedIn:</td><td><a href="https://linkedin.com">Mi perfil</a></td></tr>
+    <tr><td>Email:</td><td>Federicomerli234@gmail.com</td></tr>
+    <tr><td>LinkedIn:</td><td><a href="https://linkedin.com">Si tan solo tubiera</a></td></tr>
   </table>
   <a href="index.html">Volver al inicio</a>
 </body>
