Creada página proyectos.html con lista de enlaces

--- a/contacto.html
+++ b/contacto.html
@@ -8,7 +8,7 @@
   <h2>Contacto</h2>
   <table>
     <tr><td>Email:</td><td>Federicomerli234@gmail.com</td></tr>
-    <tr><td>LinkedIn:</td><td><a href="https://linkedin.com">Si tan solo tubiera</a></td></tr>
+    <tr><td>LinkedIn:</td><td><a href="https://linkedin.com">Federico Merlo</a></td></tr>
   </table>
   <a href="index.html">Volver al inicio</a>
 </body>
