--- a/proyectos.html
+++ b/proyectos.html
@@ -7,8 +7,8 @@
 <body>
   <h2>Proyectos</h2>
   <ul>
-    <li><a href="https://github.com/tu_usuario/proyecto1">Proyecto 1</a></li>
-    <li><a href="https://github.com/tu_usuario/proyecto2">Proyecto 2</a></li>
+    <li><a href="https://github.com/BraKO209/proyecto1">Proyecto 1</a></li>
+    <li><a href="https://github.com/BraKO209/proyecto2">Proyecto 2</a></li>
   </ul>
   <a href="index.html">Volver al inicio</a>
 </body>
