Revisión final del portfolio y ajustes menores

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h1>¡Hola! Soy Federico Merlo Brac</h1>
-  <p>Soy estudiante de programacion en la UTN</p>
+  <p>Soy estudiante de programacion en la UTN, busco la oportunidad de ganar experiencia antes de mi egreso</p>
 
   <img src="https://via.placeholder.com/150" alt="Foto de perfil">
 
