--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <img src="img/MiFoto.jpg.jfif" alt="Mi foto de perfil" width="200">
+
   <h1>¡Hola! Soy Federico Merlo Brac</h1>
   <p>Soy estudiante de programacion en la UTN, busco la oportunidad de ganar experiencia antes de mi egreso</p>
 
