Revisión final del portfolio y ajustes menores

--- a/index.html
+++ b/index.html
@@ -5,14 +5,19 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>¡Hola! Soy Federico Merlo Brac</h1>
-  <p>Soy estudiante de programacion en la UTN, busco la oportunidad de ganar experiencia antes de mi egreso</p>
-
-  <img src="img/MiFoto.jpg.jfif" alt="Mi foto de perfil" width="200">
-
-  <p>
-    <a href="contacto.html">Contacto</a> |
-    <a href="proyectos.html">Proyectos</a>
-  </p>
+  <div class="container">
+    <div class="perfil">
+      <img src="img/MiFoto.jpg.jfif" alt="Mi foto de perfil" width="200">
+    </div>
+    <div class="info">
+      <h1>¡Hola! Soy Federico Merlo Brac</h1>
+      <p>Soy estudiante de programación en la UTN, busco la oportunidad de ganar experiencia antes de mi egreso.</p>
+      <p><strong>Habilidades:</strong> CSS, Git, C++</p>
+      <p><strong>Idiomas:</strong> Español (nativo), Inglés (B1)</p>
+      <p><strong>Intereses:</strong> Desarrollo web, videojuegos</p>
+      <p><a href="contacto.html">Contacto</a> | <a href="proyectos.html">Proyectos</a></p>
+    </div>
+  </div>
 </body>
+
 </html>
