--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
       <p><a href="contacto.html">Contacto</a> | <a href="proyectos.html">Proyectos</a></p>
     </div>
   </div>
+  <p>Conocimientos:</p>
+<ul>
+  <li>HTML</li>
+  <li>CSS</li>
+  <li>Git y GitHub</li>
+</ul>
+
 </body>
 
 </html>
